# rustchess

./: Cargo.toml  Makefile  README.md  TODO.md  build.rs  buildspec.yml
proto/: rustchess.proto
src/: engine.rs  main.rs
