[package]
name = "chess_engine"
version = "0.1.0"
authors = ["Emmett Kotlikoff <ekotlikoff@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chess = "3.2.0"
tonic = "0.4"
prost = "0.7"
futures-core = "0.3"
futures-util = "0.3"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
async-stream = "0.3.0"
syslog = "^6.0"
log ="0.4"

[build-dependencies]
tonic-build = "0.4"
